--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "screepsmod-server-stats",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {},
-  "devDependencies": {},
   "screeps_mod": true,
   "keywords": [
     "screeps",
@@ -13,6 +12,7 @@
   "author": "Pieter Brandsen",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "winston": "^3.8.2"
   }
 }
