--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "screepsmod-server-stats",
-  "version": "1.0.2",
+  "name": "screepsmod-server-stats-test",
+  "version": "1.0.13",
   "description": "",
   "main": "index.js",
   "scripts": {},
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "winston": "^3.8.2"
+    "express-rate-limit": "^6.7.0",
+    "log-to-file": "^3.0.3"
   }
 }
