--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "screepsmod-server-stats-test",
-  "version": "1.0.13",
+  "version": "1.0.73",
   "description": "",
   "main": "index.js",
   "scripts": {},
-  "screeps_mod": true,
+  "screeps_mod": false,
   "keywords": [
     "screeps",
     "mod"
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
-    "log-to-file": "^3.0.3"
+    "lodash": "^4.17.21",
+    "log-to-file": "^3.0.3",
+    "yamljs": "^0.3.0"
   }
 }
