--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screepsmod-server-stats-test",
-  "version": "2.0.49",
+  "version": "2.0.62",
   "description": "",
   "main": "index.js",
   "scripts": {},
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
+    "graphite": "^0.1.5",
     "lodash": "^4.17.21",
     "log-to-file": "^3.0.3",
     "yamljs": "^0.3.0"
