--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "screepsmod-server-stats-test",
-  "version": "2.0.89",
+  "name": "screepsmod-server-stats",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {},
