--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "screepsmod-server-stats",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {},
-  "screeps_mod": false,
+  "screeps_mod": true,
   "keywords": [
     "screeps",
     "mod"
